Confrim popup header alignment fix.

--- a/stylesheets/_bchat.scss
+++ b/stylesheets/_bchat.scss
@@ -918,7 +918,7 @@ label {
     // overflow-y: auto;
     overflow-x: hidden;
     // max-height: 513px;
-    padding: 0px $bchat-margin-md 0px 20px;
+    padding: 0px $bchat-margin-md 0px 15px;
   }
 
   &__deleteAccountModal {
